--- a/src/pages/Home/style/web.scss
+++ b/src/pages/Home/style/web.scss
@@ -1,24 +1,28 @@
 .home_box {
   .block1 {
     width: 100%;
-    min-height: 110vh;
+    min-height: 100vh;
+    position: relative;
     video {
       width: 100%;
       height: 100%;
+      position: absolute;
+      top: -200px;
     }
     .center_box {
       width: 1200px;
       margin: 0 auto;
       position: relative;
+      padding-top: 20px;
       .content_box {
         width: 100%;
         display: flex;
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        position: absolute;
+        // position: absolute;
         z-index: 1;
-        top: -390px;
+        // top: -510px;
         img {
           width: 50%;
           height: auto;
@@ -73,7 +77,7 @@
       display: flex;
       align-items: center;
       flex-direction: column;
-      justify-content: center;
+      // justify-content: center;
       img {
         width: 1150px;
         height: 404px;
@@ -101,7 +105,7 @@
   .block3 {
     width: 100%;
     position: relative;
-    padding-top: 100px;
+    // padding-top: 100px;
     .container {
       width: 1200px;
       margin: 0 auto;
@@ -234,6 +238,8 @@
         margin-top: 160px;
         .title {
           font-size: 64.4035px;
+          margin: 0;
+          margin-bottom: 64px;
         }
         ul {
           width: 80%;
@@ -258,7 +264,7 @@
       background: url("../../../assets//home/big_bg.png") no-repeat center;
       background-size: 100% 100%;
       left: 0;
-      top: 0;
+      top: -216px;
       z-index: -1;
     }
   }
@@ -271,7 +277,9 @@
     .title {
       font-size: 64.4035px;
       text-align: center;
+      margin: 0;
       margin-top: 178px;
+      margin-bottom: 135px;
     }
     .content_box {
       background: url("../../../assets/home/block4_bg.png") no-repeat center;
@@ -324,7 +332,9 @@
     .title {
       font-size: 64.4035px;
       text-align: center;
-      margin-top: 178px;
+      margin: 0;
+      margin-top: 78px;
+      margin-bottom: 100px;
     }
     ul {
       width: 1200px;
