--- a/src/components/HomeLayout/footer/web.scss
+++ b/src/components/HomeLayout/footer/web.scss
@@ -1,14 +1,13 @@
 .footer_box {
   width: 100%;
-  // height: 400px;
-  position: absolute;
-  bottom: 0;
+  height: 200px;
   .container {
     width: 1200px;
     margin: 0 auto;
+    height: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     z-index: 1;
     .left {
       ul {
