--- a/src/pages/Home/style/web.scss
+++ b/src/pages/Home/style/web.scss
@@ -69,7 +69,7 @@
     }
   }
   .block2 {
-    min-height: 100vh;
+    min-height: 125vh;
     .container_box {
       width: 1200px;
       margin: 0 auto;
@@ -85,20 +85,157 @@
       p {
         width: 777px;
         font-size: 20px;
-        text-align: center;
+        text-align: left;
+        // margin-top: 47px;
+        margin: 0;
+        padding: 0;
+        margin-top: 20px;
+        position: relative;
+        &::before {
+          top: -10px;
+          left: -30px;
+          content: "";
+          width: 47px;
+          height: 22px;
+          position: absolute;
+        }
+      }
+      .first {
         margin-top: 47px;
+        &::before {
+          background: url("../../../assets/home/first.png") no-repeat center;
+          background-size: cover;
+        }
+      }
+      .second {
+        &::before {
+          background: url("../../../assets/home/second.png") no-repeat center;
+          background-size: cover;
+        }
+      }
+      .third {
+        &::before {
+          background: url("../../../assets/home/third.png") no-repeat center;
+          background-size: cover;
+        }
+      }
+      .forth {
+        &::before {
+          background: url("../../../assets/home/forth.png") no-repeat center;
+          background-size: cover;
+        }
+      }
+      .posti_box {
+        height: 600px;
+        width: 100%;
+        position: relative;
+        p {
+          width: 245px;
+          height: 245px;
+          background: linear-gradient(
+            119.14deg,
+            rgba(98, 98, 98, 0.2) 16.15%,
+            rgba(69, 69, 69, 0.2) 83.38%
+          );
+          backdrop-filter: blur(100px);
+          /* Note: backdrop-filter has minimal browser support */
+          text-align: center;
+          border-radius: 130px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-size: 20px;
+          color: #fff;
+          padding: 0 24px;
+          position: absolute;
+        }
+        .first_box {
+          bottom: 0;
+          left: -30px;
+          z-index: 2;
+        }
+        .second_box {
+          top: 0;
+          left: 260px;
+          z-index: 2;
+        }
+        .third_box {
+          left: 550px;
+          top: 100px;
+          z-index: 2;
+        }
+        .forth_box {
+          right: 100px;
+          top: -50px;
+          z-index: 2;
+        }
+        .ball1{
+          width: 179px;
+          height: 179px;
+          background: url("../../../assets/home/ball1.png") no-repeat center;
+          background-size: cover;
+          bottom: 0;
+          left: -200px;
+          z-index: -1;
+        }
+        .ball2 {
+          width: 132px;
+          height: 132px;
+          background: url("../../../assets/home/ball2.png") no-repeat center;
+          background-size: cover;
+          top: -70px;
+          left: 34px;
+          z-index: -1;
+        }
+        .ball3 {
+          width: 152px;
+          height: 152px;
+          background: url("../../../assets/home/ball3.png") no-repeat center;
+          background-size: cover;
+          top: 255px;
+          left: 270px;
+          z-index: -1;
+        }
+        .ball4 {
+          width: 90px;
+          height: 90px;
+          background: url("../../../assets/home/ball4.png") no-repeat center;
+          background-size: cover;
+          top: 0px;
+          left: 625px;
+          z-index: -1;
+        }
+        .ball5 {
+          width: 458px;
+          height: 458px;
+          background: url("../../../assets/home/ball5.png") no-repeat center;
+          background-size: 100% 100%;
+          top: 0px;
+          right: -320px;
+          z-index: -1;
+        }
       }
       .white_box {
-        width: 162px;
-        height: 45px;
-        background: linear-gradient(225deg, #18c8ff 14.89%, #933ffe 85.85%);
-        border-radius: 50px;
-        color: #fff;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 18px;
-        margin-top: 40px;
+        width: 245px;
+          height: 245px;
+          background: linear-gradient(
+            119.14deg,
+            rgba(98, 98, 98, 0.2) 16.15%,
+            rgba(69, 69, 69, 0.2) 83.38%
+          );
+          backdrop-filter: blur(100px);
+          /* Note: backdrop-filter has minimal browser support */
+          font-weight: 800;
+          border-radius: 130px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-size: 20px;
+          color: #fff;
+          padding: 0 24px;
+          position: absolute;
+          right: 100px;
+          top: 250px;
       }
     }
   }
@@ -224,6 +361,7 @@
           .title {
             font-size: 64.4px;
             margin-bottom: 20px;
+            font-weight: 800;
           }
           .content {
             font-size: 20px;
@@ -240,6 +378,7 @@
           font-size: 64.4035px;
           margin: 0;
           margin-bottom: 64px;
+          font-weight: 800;
         }
         ul {
           width: 80%;
@@ -251,7 +390,12 @@
             align-items: center;
             cursor: pointer;
             img {
-              margin-bottom: 10px;
+              // margin-bottom: 10px;
+            }
+            p {
+              margin: 0;
+              padding: 0;
+              color: #a4a4a4;
             }
           }
         }
@@ -280,6 +424,7 @@
       margin: 0;
       margin-top: 178px;
       margin-bottom: 135px;
+      font-weight: 800;
     }
     .content_box {
       background: url("../../../assets/home/block4_bg.png") no-repeat center;
@@ -346,6 +491,7 @@
       margin: 0;
       margin-top: 78px;
       margin-bottom: 100px;
+      font-weight: 800;
     }
     ul {
       width: 1200px;
