修改头部，脚部

--- a/src/components/HomeLayout/footer/web.scss
+++ b/src/components/HomeLayout/footer/web.scss
@@ -16,8 +16,9 @@
         li {
           margin-right: 62px;
           cursor: pointer;
-          p {
+          a {
             font-size: 17px;
+            color: #fff;
           }
         }
       }
