--- a/src/pages/Home/style/web.scss
+++ b/src/pages/Home/style/web.scss
@@ -169,7 +169,7 @@
           top: -50px;
           z-index: 2;
         }
-        .ball1{
+        .ball1 {
           width: 179px;
           height: 179px;
           background: url("../../../assets/home/ball1.png") no-repeat center;
@@ -217,25 +217,26 @@
       }
       .white_box {
         width: 245px;
-          height: 245px;
-          background: linear-gradient(
-            119.14deg,
-            rgba(98, 98, 98, 0.2) 16.15%,
-            rgba(69, 69, 69, 0.2) 83.38%
-          );
-          backdrop-filter: blur(100px);
-          /* Note: backdrop-filter has minimal browser support */
-          font-weight: 800;
-          border-radius: 130px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          font-size: 20px;
-          color: #fff;
-          padding: 0 24px;
-          position: absolute;
-          right: 100px;
-          top: 250px;
+        height: 245px;
+        cursor: pointer;
+        background: linear-gradient(
+          119.14deg,
+          rgba(98, 98, 98, 0.2) 16.15%,
+          rgba(69, 69, 69, 0.2) 83.38%
+        );
+        backdrop-filter: blur(100px);
+        /* Note: backdrop-filter has minimal browser support */
+        font-weight: 800;
+        border-radius: 130px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+        color: #fff;
+        padding: 0 24px;
+        position: absolute;
+        right: 100px;
+        top: 250px;
       }
     }
   }
@@ -484,6 +485,7 @@
       position: absolute;
       top: 0;
       left: 0;
+      z-index: -1;
     }
     .title {
       font-size: 64.4035px;
