--- a/src/views/Home/style/web.scss
+++ b/src/views/Home/style/web.scss
@@ -132,11 +132,7 @@
         p {
           width: 245px;
           height: 245px;
-          background: linear-gradient(
-            119.14deg,
-            rgba(98, 98, 98, 0.2) 16.15%,
-            rgba(69, 69, 69, 0.2) 83.38%
-          );
+          background: linear-gradient(119.14deg, rgba(98, 98, 98, 0.2) 16.15%, rgba(69, 69, 69, 0.2) 83.38%);
           backdrop-filter: blur(100px);
           /* Note: backdrop-filter has minimal browser support */
           text-align: center;
@@ -219,11 +215,7 @@
         width: 245px;
         height: 245px;
         cursor: pointer;
-        background: linear-gradient(
-          119.14deg,
-          rgba(98, 98, 98, 0.2) 16.15%,
-          rgba(69, 69, 69, 0.2) 83.38%
-        );
+        background: linear-gradient(119.14deg, rgba(98, 98, 98, 0.2) 16.15%, rgba(69, 69, 69, 0.2) 83.38%);
         backdrop-filter: blur(100px);
         /* Note: backdrop-filter has minimal browser support */
         font-weight: 800;
@@ -445,11 +437,7 @@
             background-image: url("../../../assets//home/romap.png");
             background-repeat: no-repeat;
             background-position: center;
-            background-color: linear-gradient(
-              116.29deg,
-              rgba(98, 98, 98, 0.28) -16.91%,
-              rgba(0, 0, 0, 0.28) 101.76%
-            );
+            background-color: linear-gradient(116.29deg, rgba(98, 98, 98, 0.28) -16.91%, rgba(0, 0, 0, 0.28) 101.76%);
             background-size: 100% 100%;
             margin-bottom: 65px;
             padding: 30px 42px;
