--- a/src/components/HomeLayout/menu/mobile.scss
+++ b/src/components/HomeLayout/menu/mobile.scss
@@ -6,6 +6,7 @@
   top: 4rem;
   transition: height linear 0.3s;
   z-index: 1000;
+  font-family: "PingFang SC";
 }
 .open_shadow_box {
   height: 100vh;
