--- a/src/style.scss
+++ b/src/style.scss
@@ -10,6 +10,7 @@ body,
 body {
   font-style: normal;
   font-stretch: normal;
+  font-family: "PingFang SC";
   overflow-y: auto;
   text-rendering: optimizeLegibility;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
