--- a/src/views/Home/style/web.scss
+++ b/src/views/Home/style/web.scss
@@ -1,18 +1,21 @@
 .home_box {
   .block1 {
     width: 100%;
-    min-height: 100vh;
+    min-height: 115vh;
     position: relative;
     video {
       width: 100%;
       height: 100%;
-      position: absolute;
-      top: -200px;
+      // position: absolute;
+      // top: -200px;
     }
     .center_box {
       width: 1200px;
       margin: 0 auto;
-      position: relative;
+      position: absolute;
+      top: 120px;
+      left: 50%;
+      transform: translateX(-50%);
       padding-top: 20px;
       .content_box {
         width: 100%;
@@ -70,6 +73,7 @@
   }
   .block2 {
     min-height: 125vh;
+    // margin-top: 150px;
     .container_box {
       width: 1200px;
       margin: 0 auto;
@@ -100,31 +104,7 @@
           position: absolute;
         }
       }
-      .first {
-        margin-top: 47px;
-        &::before {
-          background: url("../../../assets/home/first.png") no-repeat center;
-          background-size: cover;
-        }
-      }
-      .second {
-        &::before {
-          background: url("../../../assets/home/second.png") no-repeat center;
-          background-size: cover;
-        }
-      }
-      .third {
-        &::before {
-          background: url("../../../assets/home/third.png") no-repeat center;
-          background-size: cover;
-        }
-      }
-      .forth {
-        &::before {
-          background: url("../../../assets/home/forth.png") no-repeat center;
-          background-size: cover;
-        }
-      }
+
       .posti_box {
         height: 600px;
         width: 100%;
@@ -132,8 +112,8 @@
         p {
           width: 245px;
           height: 245px;
-          background: linear-gradient(119.14deg, rgba(98, 98, 98, 0.2) 16.15%, rgba(69, 69, 69, 0.2) 83.38%);
-          backdrop-filter: blur(100px);
+          background: url("../../../assets/home/kouhao_bg.png") no-repeat center;
+          background-size: cover;
           /* Note: backdrop-filter has minimal browser support */
           text-align: center;
           border-radius: 130px;
@@ -152,18 +132,33 @@
         }
         .second_box {
           top: 0;
-          left: 260px;
+          left: 310px;
           z-index: 2;
         }
         .third_box {
-          left: 550px;
+          left: 650px;
           top: 100px;
           z-index: 2;
         }
         .forth_box {
-          right: 100px;
+          right: -60px;
           top: -50px;
           z-index: 2;
+        }
+        .add_mation {
+          -webkit-animation: floating-simple 2.5s ease-in-out infinite !important;
+          animation: floating-simple 2.5s ease-in-out infinite !important;
+        }
+        @keyframes floating-simple {
+          0% {
+            transform: translateY(0);
+          }
+          50% {
+            transform: translateY(3%);
+          }
+          100% {
+            transform: translateY(0);
+          }
         }
         .ball1 {
           width: 179px;
@@ -215,8 +210,8 @@
         width: 245px;
         height: 245px;
         cursor: pointer;
-        background: linear-gradient(119.14deg, rgba(98, 98, 98, 0.2) 16.15%, rgba(69, 69, 69, 0.2) 83.38%);
-        backdrop-filter: blur(100px);
+        background: url("../../../assets/home/whitepaper_bg.png") no-repeat center;
+        background-size: cover;
         /* Note: backdrop-filter has minimal browser support */
         font-weight: 800;
         border-radius: 130px;
@@ -227,7 +222,7 @@
         color: #fff;
         padding: 0 24px;
         position: absolute;
-        right: 100px;
+        right: -60px;
         top: 250px;
       }
     }
@@ -249,7 +244,7 @@
           position: relative;
           width: 580px;
           height: 595px;
-          background: url("../../../assets//home/list_bg.png") no-repeat center;
+          background: url("../../../assets/home/list_bg.png") no-repeat center;
           background-size: 100% 100%;
           margin-bottom: 65px;
           padding: 20px 34px;
@@ -257,6 +252,22 @@
           display: flex;
           flex-direction: column;
           justify-content: space-between;
+          &:nth-child(1) {
+            background: url("../../../assets/home/list_bg1.png") no-repeat center;
+            background-size: 100% 100%;
+          }
+          &:nth-child(2) {
+            background: url("../../../assets/home/list_bg1.png") no-repeat center;
+            background-size: 100% 100%;
+          }
+          &:nth-child(3) {
+            background: url("../../../assets/home/list_bg3.png") no-repeat center;
+            background-size: 100% 100%;
+          }
+          &:nth-child(4) {
+            background: url("../../../assets/home/list_bg4.png") no-repeat center;
+            background-size: 100% 100%;
+          }
           p {
             margin: 0;
             padding: 0;
@@ -275,10 +286,11 @@
             width: 198px;
             height: 47px;
             background: url("../../../assets/home/bottom_btn.png") no-repeat center;
-            background: cover;
+            background-size: cover;
             display: flex;
             justify-content: center;
             align-items: center;
+            border-radius: 100px;
             .arrow {
               width: 20px;
               height: 12px;
@@ -298,21 +310,25 @@
           &:nth-child(1) {
             &::after {
               background: url("../../../assets/home/cdoge.png") no-repeat center;
+              background-size: cover;
             }
           }
           &:nth-child(2) {
             &::after {
               background: url("../../../assets/home/cnft.png") no-repeat center;
+              background-size: cover;
             }
           }
           &:nth-child(3) {
             &::after {
               background: url("../../../assets/home/cswap.png") no-repeat center;
+              background-size: cover;
             }
           }
           &:nth-child(4) {
             &::after {
               background: url("../../../assets/home/ctaik.png") no-repeat center;
+              background-size: cover;
             }
           }
         }
@@ -336,7 +352,7 @@
           &::after {
             content: "";
             width: 151px;
-            height: 385px;
+            height: 403px;
             position: absolute;
             background: linear-gradient(270deg, #000000 0%, rgba(0, 0, 0, 0) 74.32%);
             transform: rotate(-90deg);
@@ -471,7 +487,7 @@
       background: url("../../../assets/home/bg-gradient-img.png") no-repeat center;
       background-size: cover;
       position: absolute;
-      top: 0;
+      top: 60px;
       left: 0;
       z-index: -1;
     }
@@ -491,9 +507,13 @@
       align-items: center;
       justify-content: space-between;
       li {
-        width: 33%;
+        width: 30%;
         display: flex;
         justify-content: center;
+        img {
+          width: 100%;
+          height: auto;
+        }
       }
     }
   }
