--- a/src/views/Home/style/web.scss
+++ b/src/views/Home/style/web.scss
@@ -126,13 +126,13 @@
           position: absolute;
         }
         .first_box {
-          bottom: 0;
+          bottom: 30px;
           left: -30px;
           z-index: 2;
         }
         .second_box {
           top: 0;
-          left: 310px;
+          left: 280px;
           z-index: 2;
         }
         .third_box {
@@ -213,7 +213,7 @@
         background: url("../../../assets/home/whitepaper_bg.png") no-repeat center;
         background-size: cover;
         /* Note: backdrop-filter has minimal browser support */
-        font-weight: 800;
+        // font-weight: 800;
         border-radius: 130px;
         display: flex;
         justify-content: center;
@@ -222,8 +222,8 @@
         color: #fff;
         padding: 0 24px;
         position: absolute;
-        right: -60px;
-        top: 250px;
+        right: -40px;
+        top: 290px;
       }
     }
   }
@@ -413,11 +413,11 @@
     .bg_box {
       position: absolute;
       width: 100%;
-      height: 2500px;
+      height: 2800px;
       background: url("../../../assets//home/big_bg.png") no-repeat center;
       background-size: 100% 100%;
       left: 0;
-      top: -216px;
+      top: -316px;
       z-index: -1;
     }
   }
@@ -454,6 +454,7 @@
             background-repeat: no-repeat;
             background-position: center;
             background-color: linear-gradient(116.29deg, rgba(98, 98, 98, 0.28) -16.91%, rgba(0, 0, 0, 0.28) 101.76%);
+            backdrop-filter: blur(50px);
             background-size: 100% 100%;
             margin-bottom: 65px;
             padding: 30px 42px;
