--- a/src/components/HomeLayout/footer/mobile.scss
+++ b/src/components/HomeLayout/footer/mobile.scss
@@ -1,5 +1,5 @@
 .mobile_footer_box {
-  height: 500px;
+  min-height: 500px !important;
   font-family: "PingFang SC";
   .container {
     width: 100%;
