--- a/src/components/HomeLayout/footer/mobile.scss
+++ b/src/components/HomeLayout/footer/mobile.scss
@@ -1,5 +1,6 @@
 .mobile_footer_box {
-  min-height: 500px !important;
+  // min-height: 500px !important;
+  padding-bottom: 20px;
   font-family: "PingFang SC";
   .container {
     width: 100%;
