--- a/src/components/HomeLayout/footer/web.scss
+++ b/src/components/HomeLayout/footer/web.scss
@@ -1,6 +1,7 @@
 .footer_box {
   width: 100%;
-  min-height: 200px;
+  // min-height: 200px;
+  padding-bottom: 20px;
   .container {
     width: 1200px;
     margin: 0 auto;
