--- a/src/views/Home/style/web.scss
+++ b/src/views/Home/style/web.scss
@@ -112,9 +112,8 @@
         p {
           width: 245px;
           height: 245px;
-          background: url("../../../assets/home/kouhao_bg.png") no-repeat center;
-          background-size: cover;
-          /* Note: backdrop-filter has minimal browser support */
+          // background: url("../../../assets/home/kouhao_bg.png") no-repeat center;
+          // background-size: cover;
           text-align: center;
           border-radius: 130px;
           display: flex;
@@ -126,7 +125,7 @@
           position: absolute;
         }
         .first_box {
-          bottom: 0px;
+          top: 100px;
           left: 20px;
           z-index: 2;
         }
@@ -146,6 +145,9 @@
           z-index: 2;
         }
         .add_mation {
+          background: linear-gradient(119.14deg, rgba(98, 98, 98, 0.2) 16.15%, rgba(69, 69, 69, 0.2) 83.38%);
+          backdrop-filter: blur(100px);
+          border: 2px solid rgba(225, 225, 225, 0.3);
           -webkit-animation: floating-simple 2.5s ease-in-out infinite !important;
           animation: floating-simple 2.5s ease-in-out infinite !important;
         }
@@ -210,10 +212,9 @@
         width: 245px;
         height: 245px;
         cursor: pointer;
-        background: url("../../../assets/home/whitepaper_bg.png") no-repeat center;
-        background-size: cover;
-        /* Note: backdrop-filter has minimal browser support */
-        // font-weight: 800;
+        background: linear-gradient(119.14deg, rgba(98, 98, 98, 0.2) 16.15%, rgba(69, 69, 69, 0.2) 83.38%);
+        backdrop-filter: blur(100px);
+        border: 2px solid rgba(225, 225, 225, 0.3);
         border-radius: 130px;
         display: flex;
         justify-content: center;
@@ -235,7 +236,7 @@
           top: 20px;
         }
         &:hover {
-          transform: scale(1.1);
+          font-size: 22px;
         }
       }
     }
