--- a/src/components/HomeLayout/header/web.scss
+++ b/src/components/HomeLayout/header/web.scss
@@ -27,6 +27,9 @@
     .left {
       display: flex;
       align-items: center;
+      img {
+        cursor: pointer;
+      }
     }
     .right {
       display: flex;
