--- a/src/views/CDog/style/web.scss
+++ b/src/views/CDog/style/web.scss
@@ -1,15 +1,24 @@
 .dog_box {
   width: 100%;
   margin-top: 108px;
-  height: calc(100vh - 174px);
+  height: calc(100vh - 194px);
   position: relative;
   .bottom_bg {
-    width: 2738px;
-    height: 2738px;
-    background: url("../../../assets/cdog/big_bg.png");
+    // width: 2738px;
+    // height: 2738px;
+    // background: url("../../../assets/home/big_bg.png") no-repeat center;
+    // background-size: cover;
+    // position: absolute;
+    // bottom: -68px;
+    // right: 0;
+  }
+  .top_bg {
+    width: 1564px;
+    height: 1564px;
+    background: url("../../../assets/cdog/top_bg.png") no-repeat center;
     background-size: cover;
     position: absolute;
-    bottom: -68px;
-    right: 0;
+    top: -108px;
+    left: 0;
   }
 }
