--- a/src/views/Home/style/mobile.scss
+++ b/src/views/Home/style/mobile.scss
@@ -93,7 +93,7 @@
           /* Note: backdrop-filter has minimal browser support */
           // font-weight: 800;
           // border-radius: 130px;
-          
+
           display: flex;
           justify-content: center;
           align-items: center;
@@ -236,6 +236,7 @@
           display: flex;
           flex-direction: column;
           align-items: center;
+          padding-right: 0;
           .title {
             font-size: 38px;
             margin-top: 33px;
