--- a/src/views/CDog/style/web.scss
+++ b/src/views/CDog/style/web.scss
@@ -3,22 +3,126 @@
   margin-top: 108px;
   height: calc(100vh - 194px);
   position: relative;
-  .bottom_bg {
-    // width: 2738px;
-    // height: 2738px;
-    // background: url("../../../assets/home/big_bg.png") no-repeat center;
-    // background-size: cover;
-    // position: absolute;
-    // bottom: -68px;
-    // right: 0;
-  }
-  .top_bg {
-    width: 1564px;
-    height: 1564px;
-    background: url("../../../assets/cdog/top_bg.png") no-repeat center;
-    background-size: cover;
+  .big_bg {
     position: absolute;
     top: -108px;
     left: 0;
+    width: 100%;
+    height: 100vh;
+    background: url("../../../assets/big_bg.png") no-repeat center;
+    background-size: 100% 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: -1;
+  }
+  .center_box {
+    position: absolute;
+    left: 0;
+    top: 40px;
+    right: 0;
+    bottom: 0;
+    margin: 0 auto;
+    z-index: 1;
+    width: 533px;
+    height: 657px;
+    background: url("../../../assets/cdog/center_bg.png") no-repeat center;
+    background-size: cover;
+    padding: 0 50px;
+    padding-top: 26px;
+    box-sizing: border-box;
+    .content_box {
+      width: 434px;
+      height: 399px;
+      background: url("../../../assets/cdog/chose_left.png") no-repeat center;
+      background-size: cover;
+      padding-top: 17px;
+      padding-bottom: 54px;
+      position: relative;
+      .top {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        button {
+          border: none;
+          background: none;
+          outline: none;
+          margin: 0;
+          flex: 1;
+          text-align: center;
+          font-weight: 400;
+          font-size: 24px;
+          color: #fff;
+          cursor: pointer;
+        }
+      }
+      .center_content {
+        padding: 0 13px;
+        padding-top: 40px;
+        box-sizing: border-box;
+
+        .top_text {
+          text-align: center;
+        }
+        .change_box {
+          margin-top: 67px;
+          .from_box {
+            width: 100%;
+            height: 76px;
+            background: #485470;
+            border-radius: 25px;
+          }
+          .top_box {
+            margin-top: 12px;
+          }
+        }
+      }
+      &::after {
+        content: "";
+        width: 531px;
+        height: 1px;
+        position: absolute;
+        background: url("../../../assets/cdog/line.png") no-repeat center;
+        background-size: 100% 100%;
+        left: -50px;
+        bottom: -54px;
+      }
+    }
+    .bottom_btn {
+      padding: 0 17px;
+      margin-top: 108px;
+      button {
+        outline: none;
+        border: none;
+        background: none;
+        width: 100%;
+        background: linear-gradient(225deg, #18c8ff 14.89%, #933ffe 85.85%);
+        border-radius: 30px;
+        height: 76px;
+        font-weight: 800;
+        font-size: 24px;
+        color: #fff;
+      }
+    }
+    .right_content_box {
+      width: 434px;
+      height: 539px;
+      background: url("../../../assets/cdog/chose_right.png") no-repeat center;
+      background-size: cover;
+    }
+  }
+  .release_center_box {
+    width: 533px;
+    height: 738px;
+    background: url("../../../assets/cdog/release_center_bg.png") no-repeat center;
+    background-size: cover;
+    .content_box {
+      &::after {
+        bottom: -38px;
+      }
+    }
+    .bottom_btn {
+      margin-top: 70px;
+    }
   }
 }
